# llm-core

./: .env.exa  .gitignore  README.md  pseu.ipynb  pyproject.toml  test.py
.cursor/: llm-core.code-workspace  todo.md
.cursor/rules/: project.mdc
llm_core/: __init__.py  __rsdl__.py  require.txt
llm_core/core/: Cargo.toml
llm_core/core/src/: binder.rs  client.rs  config.rs  convo.rs  datam.rs  embed.rs  error.rs  ingest.rs  lib.rs  lucky.rs  modes.rs  orchestra.rs  retrieval.rs  sorter.rs  tools.rs  usage.rs  vector.rs
llm_core/core/src/bindings/: mod.rs  python_b.rs
llm_core/core/src/config/: models.json  storage.rs  toolkit.rs
llm_core/core/src/providers/: anthropic.rs  gemini.rs  grok.rs  mercury.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  unsupported.rs
llm_core/core/tests/: full_test.rs  sample_data.json  todo.md
llm_core/core/tests/output/: convo-76ee6cf3-357d-40e2-a8b0-0660139c4612.json  convo-9a4d03b8-cbff-42e0-b4a3-fefc4ac48749.json  fruits_and_animals.json  test_chat_kb.db  test_ingestion_doc.md
llm_core/core/tests/output/ingestion_kb/: content.db
llm_core/core/tests/output/ingestion_kb/vector_index/: data.mdb  lock.mdb
llm_core/core/tests/output/test_chat_kb_index/: data.mdb  lock.mdb
