[package]
name = "llm-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This configures the crate to be compiled as a Python-compatible library.
# The `name` is prefixed with an underscore, a common convention for internal/native modules.
# `crate-type` includes `cdylib` for Python and `rlib` for linking with other Rust crates.
name = "_llm_core" # Reverted to the valid name
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22.6", features = ["extension-module", "serde"] }

# Async runtime and utilities
tokio = { version = "1.46.1", features = ["full"] }

# HTTP client for making API calls
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }

# Serialization and deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "1.0.69"

# Unique identifiers for conversations
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Environment variable loading
dotenvy = "0.15.7"

# Random number generation
rand = "0.8.5"

# Regular expressions
regex = "1.11.1"

# Utility for finding the home directory
home = "0.5.11"

# Lazy initialization
once_cell = "1.21.3"
