[package]
name = "llm-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This configures the crate to be compiled as a Python-compatible library.
# The `name` is prefixed with an underscore, a common convention for internal/native modules.
# `crate-type` includes `cdylib` for Python and `rlib` for linking with other Rust crates.
name = "_llm_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime and utilities
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }

# Date and time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Environment variable loading
dotenvy = "0.15.7"

# Error handling
thiserror = "1.0.69"

# Utility for finding the home directory
home = "0.5.11"

# Lazy initialization
lazy_static = "1.5.0"
once_cell = "1.21.3"
log = "0.4.22"

# PyO3 for Python bindings
# Upgraded to match serde-pyobject's dependency to resolve linking conflict.
pyo3 = { version = "0.23.3", features = ["extension-module"] }

# Random number generation
rand = "0.8.5"

# Regular expressions
regex = "1.10.5"

# HTTP client for making API calls
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
retry-policies = "0.2.1"

# Serialization and deserialization
serde = { version = "1.0.204", features = ["derive"] }
serde-pyobject = "0.6.2"
serde_json = "1.0.120"
base64 = "0.22.1"

# Unique identifiers for conversations
uuid = { version = "1.9.1", features = ["v4", "serde"] }

rusqlite = { version = "0.31.0", features = ["bundled"] }
arroy = "0.6.1"
heed = "0.22.0"

[dev-dependencies]
tempfile = "3.10.1"